[project]
name = "paved-path"
version = "0.1.0"
description = "Library for working with files with automatic caching."
readme = "README.md"
authors = [
    { name = "ryn-cx", email = "84663588+ryn-cx@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff.lint]
select = ["ALL"] # Enable all linters.
ignore = [
    # S603 and S602 overlap where one or the other is always true. S603 is disabled
    # because S602 is more secure than S603.
    "S603",

    # This rule makes it impossible to access URLs that are dynamically created.
    "S310",

    # Docstrings should exist when they are useful, requiring them just leads to bad
    # docstrings.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    #
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Asserts should be allowed in tests.
